--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=customer
 
 spring.datasource.url=jdbc:mysql://b2b.ctowyayyc44n.us-east-1.rds.amazonaws.com:3306/ecommerce_customer?createDatabaseIfNotExist=true&useUnicode=true
-spring.datasource.username=venkat
+spring.datasource.username=admin
 #enter the correct MySQL Password below
 spring.datasource.password=venkatvenkat
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
