--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=customer
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_customer?createDatabaseIfNotExist=true&useUnicode=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://b2b.ctowyayyc44n.us-east-1.rds.amazonaws.com:3306/ecommerce_customer?createDatabaseIfNotExist=true&useUnicode=true
+spring.datasource.username=admin
 #enter the correct MySQL Password below
-spring.datasource.password=Venky@2326
+spring.datasource.password=venkatvenkat
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
